setup api and resources
